--- a/scan.html
+++ b/scan.html
@@ -30,7 +30,7 @@
   <script>
     let vConsole = new VConsole();
   </script>
-  <script type="text/javascript" src="js/qrcode.js"></script>
+  <script type="text/javascript" src="./qrcode.js"></script>
   <script type="text/javascript">
 
     const Scan = {
